--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -112,7 +112,7 @@
 											<h2 class="marketing-grid__title">{{ item.title }}</h2>
 											<p class="marketing-grid__excerpt">{{ item.excerpt }}</p>
 											<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{item.url}}">
-												<p class="learn-more-link">Learn more</p>
+												<p class="amplify-link">Learn more</p>
 												<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 											</a>
 										</div><!-- /.nav-grid__content -->
@@ -153,9 +153,9 @@
 				<!-- <div class="subheader" id="launch-subheader">
 					AWS Amplify comes with building blocks for frontend and mobile developers to interact with the Cloud. You can mix and match categories below as needed.
 				</div> -->
-				<!-- <div class="learn-more-link-box">
+				<!-- <div class="amplify-link-box">
 					<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/get_started">
-						<p class="learn-more-link">Get Started with Amplify</p>
+						<p class="amplify-link">Get Started with Amplify</p>
 						<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 					</a>
 				</div> -->
@@ -224,7 +224,7 @@
 				<div class="subheader bottom-subheader">
 						iOS & Android are supported with our Native SDKs. 
 						<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/get_started">
-							<p class="learn-more-link">Get Started</p>
+							<p class="amplify-link">Get Started</p>
 							<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 						</a>
 				</div>
@@ -243,7 +243,7 @@
 						<div class="marketing-content">
 							<p class="subheader inline">The Amplify Command Line Interface (CLI) is a unified toolchain to create and manage your serverless infrastructure on AWS.</p>
 							<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/toolchain">
-								<p class="learn-more-link">Learn more</p>
+								<p class="amplify-link">Learn more</p>
 								<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 							</a>
 						</div>
@@ -276,13 +276,13 @@
 				<div class="subheader inline col-sm-7">
 						Launch your apps with our minimally-styled UI components or change them to match your app style.
 					<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/ui_library">
-						<p class="learn-more-link">Learn more</p>
+						<p class="amplify-link">Learn more</p>
 						<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 					</a>
 				</div>
 				<!-- <div>
 					<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/ui_library">
-						<p class="learn-more-link">View the Library</p>
+						<p class="amplify-link">View the Library</p>
 						<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 					</a>
 				</div> -->
