--- a/docs/amplify-theme/_layouts/toolchain.html
+++ b/docs/amplify-theme/_layouts/toolchain.html
@@ -56,18 +56,12 @@
 
 		<div class="section section-top cli" id="bottom-section">
                 <div class="container">
-                    <div class="row">
-                        <div class="header col-sm-10">
-                            Cloud Automation and Code Generation
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="marketing-content">
-                            <h2 class="marketing-grid__title">Paragraph Headline Here</h2>
-                            <p class="marketing-grid__excerpt">The Amplify Command Line Interface (CLI) is a unified tool to manage your AWS services. With just one tool to download and configure, you can control multiple AWS services from the command line and automate them through scripts.</p>
-                        </div>
-                        <img id="pages" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Pages@2x.png">
-                    </div><!-- /.row -->
+					<div class="header col-sm-10">
+						Cloud Automation and Code Generation
+					</div>
+                    <div class="integrate-content">
+						<p class="marketing-grid__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+					</div>
                 </div><!-- /.container -->
             </div><!-- /.section -->
 		{% include site-footer.html %}
