--- a/docs/amplify-theme/_sass/_variables.scss
+++ b/docs/amplify-theme/_sass/_variables.scss
@@ -13,7 +13,7 @@ $color-yellow: #f6d000 !default;
 // Base
 $color-h2-border: #dadada !default;
 $color-horizontal-rule: #dadada !default;
-$color-list-prefix: #a0a0a0 !default;
+$color-list-prefix:#000  !default;
 $color-definition-list: #8a8a8a !default;
 $color-table-border: #f5f5f5 !default;
 $color-table-header-border: #ececec !default;
