--- a/docs/amplify-theme/_sass/generic/_base.scss
+++ b/docs/amplify-theme/_sass/generic/_base.scss
@@ -147,11 +147,11 @@ ul {
 
 	li {
 		position: relative;
-		padding-left: 1.875rem;
+		padding-left: 1.575rem;
 		margin-bottom: .3125rem;
 
 		&:before {
-			content: '\2014';
+			content: '•';
 			color: $color-list-prefix;
 			position: absolute;
 			left: 0;
