--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -75,22 +75,18 @@
                                     Install the CLI
                                 </div>
                                 <div class="subheader col-sm-10">
-                                    The Amplify Command Line Interface (CLI) is a unified toolchain to manage and create your AWS Cloud services. Use the CLI to enable cloud services and integrate them into your apps.
+                                    The Amplify Command Line Interface (CLI) is a unified toolchain to manage and create your AWS Cloud services. Use the CLI to enable cloud services and integrate them into your apps. Please <a href="https://nodejs.org/en/download/" target="_blank">install Node.js<sup>TM</sup></a> before you initialize
                                 </div>
                             </div>
                             <div class="row">
-                                    <div class="language-bash highlighter-rouge inline-block section-code-block">
-                                        <div class="highlight">
-                                            <pre class="highlight section-code-block">
+                                <div class="language-bash highlighter-rouge inline-block section-code-block">
+                                    <div class="highlight">
+                                        <pre class="highlight section-code-block">
 <code>$ npm install -g @aws-amplify/cli
 
 $ amplify configure</code>
-                                            </pre>
-                                        </div>    
-                                    </div>
-                                <div class="inline-block install-node-block">
-                                    <p class="subheader">Please <a href="https://nodejs.org/en/download/" target="_blank">install node.js</a> before you initialize</p>
-                                    <img id="orange-logos" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/Platform-Icons-Color@2x.png" />
+                                        </pre>
+                                    </div>    
                                 </div>
                             </div>
                             <div class="div-number">2</div>
