--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -132,7 +132,7 @@
 		{% endif %}
 
 		{% if page.marketing_grid%}
-		<div class="section section-top not-top-section">
+		<div class="section section-top not-top-section" id="guides-box">
 			<div class="container">
 				<div class="header inline-block" id="launch-header">
 					A comprehensive library for building sophisticated cloud-powered apps
