--- a/docs/amplify-theme/_layouts/tutorials.html
+++ b/docs/amplify-theme/_layouts/tutorials.html
@@ -51,17 +51,17 @@
 														<div class="row">
 															<div class='filter-item'>
 																<a href=""> 
-																	<button class="btn" id="aws-signup-btn">All</button> 
+																	<button class="btn" id="all-filter">All</button> 
 																</a>
 															</div>
 															<div class='filter-item'>
 																<a href=""> 
-																	<button class="btn btn--light" id="aws-signup-btn">Angular</button> 
+																	<button class="btn btn--light" id="angular-filter">Angular</button> 
 																</a>
 															</div>
 															<div class='filter-item'>
 																<a href=""> 
-																	<button class="btn btn--light" id="aws-signup-btn">React</button> 
+																	<button class="btn btn--light" id="react-filter">React</button> 
 																</a>
 															</div>
 														</div>
