--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -153,17 +153,17 @@ $ amplify configure</code>
                                             </a>
                                         </div>
                                         <div class="platform-box">
-                                            <a href="get_started_docs?platform=purejs">
+                                            <a href="quick_start?platform=purejs">
                                                 <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/web.png" />
                                                 <p class="platform-title">Build for Web</p>
-                                                <a href="get_started_docs?platform=purejs"> <button class="btn">Get Started</button> </a>
+                                                <a href="quick_start?platform=purejs"> <button class="btn">Get Started</button> </a>
                                             </a>
                                         </div>
                                         <div class="platform-box">
-                                            <a href="get_started_docs?platform=react-native">
+                                            <a href="quick_start?platform=react-native">
                                                 <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/ReactNat@1x.png" />
                                                 <p class="platform-title">Build with React Native</p>
-                                                <a href="get_started_docs?platform=react-native"> <button class="btn">Get Started</button> </a>
+                                                <a href="quick_start?platform=react-native"> <button class="btn">Get Started</button> </a>
                                             </a>
                                         </div>
                                     </div>
