phone img change + nav fix + library selector icons

--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -88,6 +88,7 @@
 								Select frontend library
 							</div>
 							<div class="js-library-selector">
+								<img id="js-library-icon" /> 
 								<select onchange="location = this.value" id="js-library-select">
 									{% for item in site.js_libraries %}
 										<option value={{ item.url }}>{{ item.title }}</option>
@@ -168,10 +169,14 @@
 				var platform = $.urlParam('platform');
 				if (platform) {
 					document.getElementById("js-library-select").value = "?platform="+platform;
+					let icon = document.getElementById("js-library-icon");
+					icons = {"react": "React-Small-White@1x.png", "react-native": "React-Small-White@1x.png", "angular": "Angular-Med-White@1x.png", "purejs": "JS-Small-White@1x.png"};
+					icon.src = "{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/" + icons[platform];
 				}
 			}
 		{% endif %}
 	</script>
+	<!-- 
 	{% if jekyll.environment == 'production' %}
 		<script>
 			var setBackgroundImage = function() {
@@ -220,3 +225,4 @@
 		</script>
 	{% endif %}
 	</html>
+-->
