--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -233,8 +233,8 @@
     width: 180px;
     margin-top: -7px;
 
-    @media (max-width: 844px) {
-        width: 160px;
+    @media (max-width: 859px) {
+        width: 150px;
     }
     
     .search-image {
@@ -255,8 +255,8 @@
         line-height: 24px;
         max-width: 150px;
 
-        @media (max-width: 844px) {
-            max-width: 130px;
+        @media (max-width: 859px) {
+            max-width: 120px;
         }
     }
     #search-input:focus {
@@ -2322,7 +2322,14 @@ li {
             @media (max-width: 828px) {
                 position: static;
                 margin-bottom: 20px;
-                width: 200px;
+                width: 162px;
+            }
+
+            img {
+                height: 20px;
+                left: 10px;
+                position: relative;
+                vertical-align: text-bottom;
             }
                 
             select {
@@ -2332,17 +2339,22 @@ li {
                 line-height: 24px;
                 margin: 10px;
                 border: none;
+                background: none;
                 filter: brightness(0) invert(1);
                 cursor: pointer;
             }
         }
 
         .js-library-selector-text {
-            position: absolute;
             top: 29px;
             right: 27px;
             font-size: 12px;
             color:black;
+            position: absolute;
+
+            @media (max-width: 828px) {
+                position: static;
+            }
         }
 
         .content {
