--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -2330,6 +2330,7 @@ li {
                 left: 10px;
                 position: relative;
                 vertical-align: text-bottom;
+                filter: brightness(0) invert(1);
             }
                 
             select {
