--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -85,7 +85,7 @@
 						<div class="col-md-8 section-top docs-container">
 							{% if page.url contains 'quick_start' %}
 							<div class='js-library-selector-text'>
-								Select frontend library
+								Select your framework
 							</div>
 							<div class="js-library-selector">
 								<img id="js-library-icon" /> 
