node link change + remove ui from categories + fix styleguide responsiveness

--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -75,7 +75,7 @@
                                     Install the CLI
                                 </div>
                                 <div class="subheader col-sm-10">
-                                    The Amplify Command Line Interface (CLI) is a unified toolchain to manage and create your AWS Cloud services. Use the CLI to enable cloud services and integrate them into your apps. Please <a href="https://nodejs.org/en/download/" target="_blank">install Node.js<sup>TM</sup></a> before you initialize
+                                    The Amplify Command Line Interface (CLI) is a unified toolchain to create, integrate, and manage your AWS cloud services. Install <a id="node-link" href="https://nodejs.org/en/download/" target="_blank">Node.js® and npm</a> if they are not already on your machine.
                                 </div>
                             </div>
                             <div class="row">
