--- a/docs/amplify-theme/_layouts/ui_library.html
+++ b/docs/amplify-theme/_layouts/ui_library.html
@@ -51,7 +51,7 @@
 							<div class="sections-list js-affix js-scrollspy">
 								<div class="dev-guide"> 
 									{% if site.styleguide %}
-										<div class="left-nav-section">
+										<div class="left-nav-section hidden-xs">
 											<div class="feature-list">
                                                 <ul class="nav">
 												{% for item in site.styleguide %}
