--- a/docs/amplify-theme/_layouts/toolchain.html
+++ b/docs/amplify-theme/_layouts/toolchain.html
@@ -11,9 +11,9 @@
 					<div class="col-md-8">
 						<div class="align-container" data-mh>
 							<div class="align-inner">
-                                <h1 class="hero-subheader__title">A Comprehensive & Powerful Serverless Toolchain</h1>
+                                <h1 class="hero-subheader__title">A comprehensive & powerful serverless toolchain</h1>
 								<div id="button-logo-container">
-                                    <a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/get_started" class="btn btn--dark btn--rounded btn--w-icon">
+                                    <a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/cli_guide" class="btn btn--dark btn--rounded btn--w-icon">
                                         {% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
                                         Get Started
                                     </a>
