toolchain mobile fix

--- a/docs/amplify-theme/_layouts/toolchain.html
+++ b/docs/amplify-theme/_layouts/toolchain.html
@@ -8,7 +8,7 @@
 		<div class="hero-subheader dark">
 			<div class="container homepage-header">
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-md-8 toolchain-header">
 						<div class="align-container" data-mh>
 							<div class="align-inner">
                                 <h1 class="hero-subheader__title">A comprehensive & powerful serverless toolchain</h1>
